add product feature

--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ DBPASS=""
 DBHOST="localhost"
 DBPORT="3306"
 DBNAME="db_apriori"
+
+DO_ACCESS_TOKEN="DO00TLXPPTNZE6NG44XP"
+DO_SECRET_KEY="lH9QHZx5Iql2Wv+cdossDODcXDhXSbOzWqMGvjZtnzM"
+DO_REGION="sgp1"
+DO_BUCKET="alterra"
+DO_ENDPOINT="https://sgp1.digitaloceanspaces.com/mini-project"
