add image to cloudinary server

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ DBPASS=""
 DBHOST="localhost"
 DBPORT="3306"
 DBNAME="db_apriori"
+CLOUDINARY_URL="cloudinary://482946974221856:f-8oSmpnfDH1HShc7adD99x0JLo@dyskuxh3i"
 
 DO_ACCESS_TOKEN="DO00TLXPPTNZE6NG44XP"
 DO_SECRET_KEY="lH9QHZx5Iql2Wv+cdossDODcXDhXSbOzWqMGvjZtnzM"
