fix: index out of range fix in recomendation

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DBUSER="root"
 DBPASS=""
 DBHOST="localhost"
 DBPORT="3306"
-DBNAME="db_apriori"
+DBNAME="db_apriori_adel"
 CLOUDINARY_URL="cloudinary://482946974221856:f-8oSmpnfDH1HShc7adD99x0JLo@dyskuxh3i"
 
 DO_ACCESS_TOKEN="DO00TLXPPTNZE6NG44XP"
